# avtoklinik

./: db.sqlite3
backend/: .dockerignore  .env.example  .flake8  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  requirements_dev.txt
backend/src/: manage.py
backend/src/apps/api/: urls.py
backend/src/apps/api/serializers/: calculations.py  cars.py  clients.py  deals.py  documents.py  manufacturers.py  measurements.py  oauth.py  organizations.py  otp.py  registries.py  requests.py  templates.py  tokens.py  users.py  warehouses.py  work.py  workplaces.py  works.py
backend/src/apps/api/v1/: calculations.py  cars.py  clients.py  core.py  deals.py  documents.py  manufacturers.py  measurements.py  oauth.py  organizations.py  otp.py  registries.py  requests.py  templates.py  tokens.py  urls.py  users.py  warehouses.py  work.py  workplaces.py  works.py
backend/src/apps/calculations/: apps.py  models.py
backend/src/apps/calculations/migrations/: 0001_initial.py
backend/src/apps/cars/: admin.py  filters.py  models.py
backend/src/apps/cars/migrations/: 0001_initial.py  0002_car_color_car_frame.py  0003_car_organization_alter_car_frame.py  0004_alter_car_brand_alter_car_license_plate_region_and_more.py  0005_alter_car_color.py  0006_alter_car_color.py  0007_alter_car_frame_alter_car_license_plate_region_and_more.py  0008_car_unique_car_vin_per_org_and_more.py  0009_car_client.py  0010_remove_car_license_plate_region.py
backend/src/apps/clients/: admin.py  models.py
backend/src/apps/clients/migrations/: 0001_initial.py  0002_client_created_at.py  0003_client_organization.py  0004_alter_client_organization.py  0005_alter_client_first_name_alter_client_last_name_and_more.py  0006_client_deleted_at_client_is_deleted.py  0007_client_updated_at.py  0008_alter_client_organization.py
backend/src/apps/core/: exceptions.py  mixins.py  models.py  serializers.py
backend/src/apps/core/views/: base.py
backend/src/apps/deals/: models.py
backend/src/apps/deals/migrations/: 0001_initial.py  (+5 more)
backend/src/apps/documents/: models.py
backend/src/apps/documets/: models.py
backend/src/apps/manufacturers/: admin.py  apps.py  models.py
backend/src/apps/measurements/: admin.py  apps.py  models.py  urls.py  views.py
backend/src/apps/oauth/: admin.py  models.py
backend/src/apps/organizations/: admin.py  apps.py  models.py  permissions.py  signals.py
backend/src/apps/registries/: admin.py  apps.py  filters.py  models.py
backend/src/apps/requests/: models.py
backend/src/apps/template/: admin.py  apps.py  models.py
backend/src/apps/users/: admin.py  models.py
backend/src/apps/warehouses/: admin.py  models.py
backend/src/apps/work/: models.py
backend/src/apps/workplaces/: admin.py  apps.py  models.py
backend/src/apps/works/: apps.py  models.py
backend/src/core/: settings.py  urls.py  views.py
backend/src/core/settings/: __init__.py  development.py  production.py
backend/src/tests/: conftest.py
backend/src/tests/api/: test_tokens.py
(+241 files in other folders)
