[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Zagrivnyy",email = "alexzag2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "drf-spectacular (==0.27.1)",
    "requests (>=2.32.3,<3.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-countries (>=7.6.1,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
flake8 = "^7.2.0"
isort = "^6.0.1"


[tool.poetry]
package-mode = false


[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(
  migrations   # Django DB migrations
)
'''


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
src_paths = ["src"]
